<resources>
    <string name="app_name">RFID reader-writer</string>
    <string name="power">Power</string>
    <string name="start_scan">Start scan</string>
    <string name="stop_scan">Stop scan</string>
    <string name="password">Password</string>
    <string name="password_min_4_word">Password, min 4 word</string>
    <string name="epc">EPC</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="epc_hex">EPC(Hex)</string>
    <string name="read_failure">Read failure</string>
    <string name="write_success">Write success</string>
    <string name="write_failure">Write failure</string>
    <string name="no_data">No data</string>
</resources>
